--- a/.ssh/config
+++ b/.ssh/config
@@ -9,6 +9,9 @@ Host *
     Ciphers aes256-ctr,aes192-ctr,aes128-ctr,arcfour256,aes128-cbc
     Compression no
     ConnectTimeout 5
+    ControlMaster auto
+    ControlPath ~/.ssh/sockets/%r@%h-%p
+    ControlPersist 600
     ForwardAgent yes
     HashKnownHosts yes
     IdentityFile ~/.ssh/id_rsa
