Add search-crlf executable to find CRLF in the files.
- Eat my own dog food, of course :)
- Update the stat cache
- Adjust regular search executable to relax on .git exclusion
- Update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # List of ignore files when you do git status
 
+.DS_Store
 build
 dist
 node_modules
+project.xcworkspace
 test-results
+xcuserdata
