Add new executable to show all files in Finder and file dialog.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # List of ignore files when you do git status
 
+.bash_history
 .DS_Store
+.gcc-version
 .searchignore
+.viminfo
 build
 dist
 node_modules
