Use submodule instead of including it as part of the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ __pycache__/
 .cache
 .CFUserTextEncoding
 .config
+.cups
 .DS_Store
 .gcc-version
 .MacOSX
+.pylint.d
 .python_history
 .searchignore
 .Trash
