--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@ __pycache__/
 .bash_sessions
 .cache
 .CFUserTextEncoding
+.composer
 .config
 .cups
+.drush
 .DS_Store
 .gcc-version
 .gradle
 .MacOSX
+.npm
 .pylint.d
 .python_history
 .searchignore
@@ -37,4 +40,5 @@ xcuserdata
 
 # Except this files
 !.config/Code/User/settings.json
+!.drush/drush.complete.sh
 !Library/Application Support/Code/User/settings.json
