Refactor bash completions.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 __pycache__/
 *.egg-info
 *.py[cod]
+.aws
 .bash_history
 .bash_sessions
 .cache
@@ -15,9 +16,12 @@ __pycache__/
 .gcc-version
 .gradle
 .MacOSX
+.node_repl_history
 .npm
+.oracle_jre_usage
 .pylint.d
 .python_history
+.rnd
 .searchignore
 .Trash
 .viminfo
