Add codecommit config.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,8 @@
+Host git-codecommit.*.amazonaws.com
+    ControlMaster no
+    ForwardAgent no
+    IdentityFile ~/.ssh/code_commit
+
 Host *.github.com
     ForwardAgent no
     IdentityFile ~/.ssh/github
