Simplified Ciphers and MACs.

--- a/.ssh/config
+++ b/.ssh/config
@@ -11,7 +11,7 @@ Host *.github.com
 Host *
     AddressFamily inet
     CheckHostIP yes
-    Ciphers aes256-ctr,aes192-ctr,aes128-ctr,arcfour256,aes128-cbc
+    Ciphers aes256-ctr,aes192-ctr,aes128-ctr
     Compression no
     ConnectTimeout 5
     ControlMaster auto
@@ -21,6 +21,6 @@ Host *
     HashKnownHosts yes
     IdentityFile ~/.ssh/id_rsa
     KeepAlive yes
-    MACs hmac-sha1-96,hmac-sha1,hmac-md5,umac-64@openssh.com,hmac-ripemd160
+    MACs hmac-sha1,hmac-sha2-256,hmac-sha2-512
     Protocol 2
     ServerAliveInterval 60
