Adds files/folders into git ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 .bash_sessions
 .cache
 .CFUserTextEncoding
+.cisco
 .composer
 .config
 .cpan
@@ -19,13 +20,22 @@ __pycache__/
 .eclipse
 .gcc-version
 .gradle
+.idlerc
+.lesshst
+.local
 .m2
 .MacOSX
+.mono
 .my.cnf
+.mysql_history
 .node-gyp
 .node_repl_history
 .npm*
 .oracle_jre_usage
+.p2
+.pdepend
+.phpls
+.putty
 .pylint.d
 .pypirc
 .python_history
