--- a/.ssh/config
+++ b/.ssh/config
@@ -15,7 +15,7 @@ Host *
     Compression no
     ConnectTimeout 5
     ControlMaster auto
-    ControlPath ~/.ssh/sockets/%r@%h-%p
+    ControlPath ~/.ssh/sockets/%C
     ControlPersist 600
     ForwardAgent yes
     HashKnownHosts yes
