Use keychain for SSH.

--- a/.ssh/config
+++ b/.ssh/config
@@ -9,6 +9,7 @@ Host *.github.com
     User git
 
 Host *
+    AddKeysToAgent yes
     AddressFamily inet
     CheckHostIP yes
     Ciphers aes256-ctr,aes192-ctr,aes128-ctr
@@ -24,3 +25,4 @@ Host *
     MACs hmac-sha1,hmac-sha2-256,hmac-sha2-512
     Protocol 2
     ServerAliveInterval 60
+    UseKeychain yes
