--- a/.etc/nginx/nginx.conf
+++ b/.etc/nginx/nginx.conf
@@ -1,25 +1,30 @@
-user                        root admin;
-worker_processes            2;
+user                      root admin;
+worker_processes          2;
 
 events {
-    worker_connections      1024;
+  worker_connections      1024;
 }
 
 http {
-    client_max_body_size    100m;
-    default_type            text/html;
-    fastcgi_buffer_size     32k;
-    fastcgi_buffers         8 16k;
-    fastcgi_connect_timeout 300;
-    fastcgi_read_timeout    300;
-    fastcgi_send_timeout    300;
-    gzip                    on;
-    gzip_types              text/css text/x-component application/x-javascript application/javascript text/javascript text/x-js text/richtext image/svg+xml text/plain text/xsd text/xsl text/xml image/x-icon;
-    include       	    mime.types;
-    log_format              vhost '$remote_addr - $remote_user [$time_local] "$host" "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
-    sendfile                on;
-    tcp_nodelay             on;
-    tcp_nopush              on;
+  client_max_body_size    100m;
+  default_type            text/html;
+  fastcgi_buffer_size     32k;
+  fastcgi_buffers         8 16k;
+  fastcgi_connect_timeout 300;
+  fastcgi_read_timeout    300;
+  fastcgi_send_timeout    300;
+  gzip                    on;
+  gzip_disable            "msie6";
+  gzip_proxied            any;
+  gzip_types              application/javascript application/json application/x-javascript application/xml application/xml+rss image/svg+xml image/x-icon text/css text/javascript text/js text/plain text/richtext text/x-component text/x-js text/xml text/xsd text/xsl;
+  include                 mime.types;
+  index                   index.html;
+  keepalive_timeout       65;
+  log_format              vhost '$remote_addr - $remote_user [$time_local] "$host" "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
+  sendfile                on;
+  tcp_nodelay             on;
+  tcp_nopush              on;
+  types_hash_max_size     2048;
 
-    include servers/*;
+  include servers/*;
 }
