--- a/.etc/nginx/servers/host.test.conf
+++ b/.etc/nginx/servers/host.test.conf
@@ -40,6 +40,16 @@ server {
     return 403;
   }
 
+  # Block access to scripts in site files directory.
+  location ~ ^/sites/[^/]+/files/.*\.php$ {
+    deny all;
+  }
+
+  # Allow "Well-Known URIs" as per RFC 5785.
+  location ~* ^/.well-known/ {
+    allow all;
+  }
+
   # Block access to "hidden" files and directories whose names begin with a
   # period. This includes directories used by version control systems such
   # as Subversion or Git to store control files.
@@ -49,12 +59,32 @@ server {
 
   location / {
     # try_files $uri @rewrite;                  # For Drupal <= 6
-    try_files $uri /index.php?$query_string;    # For Drupal >= 7
+    # try_files $uri /index.php?$query_string;  # For Drupal >= 7
+    try_files $uri @drupal;
     index                   index.html index.php;
   }
 
+  location @drupal {
+    rewrite ^/r/([a-z]+)$ /r/$1/ permanent;
+    rewrite ^/r/([a-z]+)/.*$ /r/$1/index.php?$query_string last;
+    rewrite ^ /index.php?$query_string last;
+  }
+
   location @rewrite {
-    rewrite ^/(.*)$ /index.php?q=$1;
+    # rewrite ^/(.*)$ /index.php?q=$1;          # For Drupal <= 6
+    rewrite ^ /index.php;                       # For Drupal >= 7
+  }
+
+  # Don't allow direct access to PHP files in the vendor directory.
+  location ~ /vendor/.*\.php$ {
+    deny all;
+    return 404;
+  }
+
+  # Protect files and directories from prying eyes.
+  location ~* \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|composer\.(lock|json)$|web\.config$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$ {
+    deny all;
+    return 404;
   }
 
   # In Drupal 8, we must also match new paths where the '.php' appears in the middle,
@@ -67,22 +97,45 @@ server {
   # controllers other than update.php in a future release.
   location ~ '\.php$|^/update.php' {
     fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
-    # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+    # Ensure the php file exists. Mitigates CVE-2019-11043.
+    try_files $fastcgi_script_name =404;
+    # Security note: If you're running a version of PHP older than the
+    # latest 5.3, you should have "cgi.fix_pathinfo = 0;" in php.ini.
+    # See http://serverfault.com/q/627903/94922 for details.
     fastcgi_intercept_errors on;
     fastcgi_pass            unix:/usr/local/var/run/php-fpm.sock;
-    fastcgi_param           SCRIPT_FILENAME $request_filename;
+    # Block httpoxy attacks. See https://httpoxy.org/.
+    fastcgi_param           HTTP_PROXY "";
+    fastcgi_param           PATH_INFO $fastcgi_path_info;
+    fastcgi_param           QUERY_STRING $query_string;
+    #fastcgi_param           SCRIPT_FILENAME $request_filename;
+    fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include                 fastcgi_params;
   }
 
-  # Fighting with styles? This little gem is amazing.
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    try_files $uri @rewrite;
+    expires                 max;
+    log_not_found           off;
+  }
+
+  # Fighting with Styles? This little gem is amazing.
   # location ~ ^/sites/.*/files/imagecache/ {     # For Drupal <= 6
-  location ~ ^/sites/.*/files/styles/ {           # For Drpal >= 7
+  location ~ ^/sites/.*/files/styles/ {           # For Drupal >= 7
     try_files $uri @rewrite;
   }
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-    expires                 max;
-    log_not_found           off;
+  # Handle private files through Drupal. Private file's path can come
+  # with a language prefix.
+  location ~ ^(/[a-z\-]+)?/system/files/ {        # For Drupal >= 7
+    try_files $uri /index.php?$query_string;
+  }
+
+  # Enforce clean URLs
+  # Removes index.php from urls like www.example.com/index.php/my-page --> www.example.com/my-page
+  # Could be done with 301 for permanent or other redirect codes.
+  if ($request_uri ~* "^(.*/)index\.php/(.*)") {
+    return 307 $1$2;
   }
 
   location ~ /\. {
