--- a/.gitconfig
+++ b/.gitconfig
@@ -1,30 +1,32 @@
-[user]
-	name = Ricky Huang
-  email = rickypc@users.noreply.github.com
 [alias]
   l = log --graph --name-status --date=local
   co = checkout
   ci = commit
   st = status
+[branch]
+  autosetupmerge = true
+#  autosetuprebase = always
 [color]
   branch = auto
   status = auto
   diff = auto
   ui = auto
   interactive = auto
-[pack]
-  threads = 0
-[gc]
-  auto = 1000
 [core]
   compression = 9
   excludesfile = ~/.gitignore
   longpaths = true
   autocrlf = false
+[gc]
+  auto = 1000
 [merge]
   renameLimit = 100000
-[branch]
-  autosetupmerge = true
-#  autosetuprebase = always
+[pack]
+  threads = 0
+[pull]
+	rebase = false
 [push]
   default = simple
+[user]
+	name = Ricky Huang
+  email = rickypc@users.noreply.github.com
