--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,51 +1,13 @@
-// Place your settings in this file to overwrite the default settings
 {
-    //-------- Editor configuration --------
-
-    // Controls the font family.
-    "editor.fontFamily": "Inconsolata",
-
-    // Controls the font size.
+    "editor.codeLens": false,
+    "editor.fontFamily": "Source Code Pro",
     "editor.fontSize": 14,
-
-    // Columns at which to show vertical rulers
+    "editor.formatOnPaste": true,
+    "editor.lineHeight": 19,
     "editor.rulers": [80, 100, 120],
-
-    // Controls after how many characters the editor will wrap to the next line. Setting this to 0 turns on viewport width wrapping
+    "editor.stickyTabStops": true,
     "editor.wrappingColumn": -1,
-
-    // Controls whether the editor should render whitespace characters
-    "editor.renderWhitespace": true,
-
-    //-------- Files configuration --------
-
-    // Configure glob patterns for excluding files and folders.
-    "files.exclude": {
-        "**/.idea": true,
-        "**/.git": true,
-        "**/.DS_Store": true,
-        "**/*.pyc": true
-    },
-
-    // When enabled, will trim trailing whitespace when you save a file.
-    "files.trimTrailingWhitespace": true,
-
-    //-------- Telemetry configuration --------
-
-    // Enable crash reports to be sent to Microsoft.
-    // This option requires restart to take effect.
-    "telemetry.enableCrashReporter": false,
-
-    // Enable usage data and errors to be sent to Microsoft.
-    "telemetry.enableTelemetry": false,
-
-    //-------- Python Configuration --------
-
-    // Whether to lint Python files using flake8
-    "python.linting.flake8Enabled": false,
-
-    //-------- Extension Manager Configuration --------
-
+    "errorLens.gutterIconsEnabled": true,
     "extension-manager.extensions": [
         "ms-vscode.csharp",
         "donjayamanne.python",
@@ -59,5 +21,31 @@
         "tushortz.java-snippets",
         "gerane.Theme-Zenburn",
         "tushortz.java-imports-snippets"
-    ]
+    ],
+    "files.exclude": {
+        "**/.idea": true,
+        "**/.git": true,
+        "**/.DS_Store": true,
+        "**/*.pyc": true
+    },
+    "files.trimTrailingWhitespace": true,
+    "javascript.validate.enable": false,
+    "php.memoryLimit": "512M",
+    "phpmd.rules": ".phpmd.xml",
+    "python.showStartPage": false,
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+    "window.newWindowDimensions": "inherit",
+    "workbench.colorTheme": "Zenburn",
+    "workbench.editor.closeOnFileDelete": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editorAssociations": [
+        {
+            "viewType": "jupyter.notebook.ipynb",
+            "filenamePattern": "*.ipynb"
+        }
+    ],
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.preferredDarkColorTheme": "Zenburn",
+    "workbench.startupEditor": "none"
 }
