--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,9 +1,11 @@
 {
+    "diffEditor.ignoreTrimWhitespace": false,
     "editor.codeLens": false,
     "editor.fontFamily": "Source Code Pro",
     "editor.fontSize": 14,
     "editor.formatOnPaste": true,
     "editor.lineHeight": 19,
+    "editor.minimap.enabled": false,
     "editor.rulers": [80, 100, 120],
     "editor.stickyTabStops": true,
     "errorLens.gutterIconsEnabled": true,
@@ -11,20 +13,28 @@
       "*.inc": "php",
       "*.install": "php",
       "*.module": "php",
+      "*.php": "php",
       "*.theme": "php"
     },
     "files.exclude": {
-        "**/.idea": true,
-        "**/.git": true,
-        "**/.DS_Store": true,
-        "**/*.pyc": true
+      "**/.DS_Store": true,
+      "**/.git": true,
+      "**/.idea": true,
+      "**/*.pyc": true
     },
     "files.trimTrailingWhitespace": true,
     "flow.showUncovered": true,
     "javascript.validate.enable": false,
-    "php.memoryLimit": "512M",
+    "outline.showFunctions": false,
+    "outline.showVariables": false,
+    "php.memoryLimit": "1024M",
+    "php.suggest.basic": false,
+    "php.validate.enable": false,
     "phpcs.autoConfigSearch": false,
+    "phpcs.executablePath": "./vendor/bin/phpcs",
+    "phpcs.lintOnType": false,
     "phpcs.standard": ".phpcs.xml",
+    "phpmd.command": "./vendor/bin/phpmd",
     "phpmd.rules": ".phpmd.xml",
     "python.showStartPage": false,
     "telemetry.enableCrashReporter": false,
