Adjust vscode settings.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,53 +1,55 @@
 {
-    "diffEditor.ignoreTrimWhitespace": false,
-    "editor.codeLens": false,
-    "editor.fontFamily": "Source Code Pro",
-    "editor.fontSize": 14,
-    "editor.formatOnPaste": true,
-    "editor.lineHeight": 19,
-    "editor.minimap.enabled": false,
-    "editor.rulers": [80, 100, 120],
-    "editor.stickyTabStops": true,
-    "errorLens.gutterIconsEnabled": true,
-    "files.associations": {
-      "*.inc": "php",
-      "*.install": "php",
-      "*.module": "php",
-      "*.php": "php",
-      "*.theme": "php"
-    },
-    "files.exclude": {
-      "**/.DS_Store": true,
-      "**/.git": true,
-      "**/.idea": true,
-      "**/*.pyc": true
-    },
-    "files.trimTrailingWhitespace": true,
-    "flow.showUncovered": true,
-    "javascript.validate.enable": false,
-    "outline.showFunctions": false,
-    "outline.showVariables": false,
-    "php.memoryLimit": "1024M",
-    "php.suggest.basic": false,
-    "php.validate.enable": false,
-    "phpcs.autoConfigSearch": false,
-    "phpcs.executablePath": "./vendor/bin/phpcs",
-    "phpcs.lintOnType": false,
-    "phpcs.standard": ".phpcs.xml",
-    "phpmd.command": "./vendor/bin/phpmd",
-    "phpmd.rules": ".phpmd.xml",
-    "python.showStartPage": false,
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
-    "terminal.integrated.copyOnSelection": true,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.fontSize": 14,
-    "window.newWindowDimensions": "inherit",
-    "workbench.colorTheme": "Zenburn",
-    "workbench.editor.closeOnFileDelete": true,
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.preferredDarkColorTheme": "Zenburn",
-    "workbench.startupEditor": "none"
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.codeLens": false,
+  "editor.fontFamily": "Source Code Pro",
+  "editor.fontSize": 14,
+  "editor.formatOnPaste": true,
+  "editor.lineHeight": 19,
+  "editor.minimap.enabled": false,
+  "editor.rulers": [80, 100, 120],
+  "editor.stickyTabStops": true,
+  "errorLens.gutterIconsEnabled": true,
+  "explorer.confirmDragAndDrop": false,
+  "files.associations": {
+    "*.inc": "php",
+    "*.install": "php",
+    "*.module": "php",
+    "*.php": "php",
+    "*.theme": "php"
+  },
+  "files.exclude": {
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.idea": true,
+    "**/*.pyc": true
+  },
+  "files.trimTrailingWhitespace": true,
+  "flow.showUncovered": true,
+  "git.ignoreLimitWarning": true,
+  "javascript.validate.enable": false,
+  "outline.showFunctions": false,
+  "outline.showVariables": false,
+  "php.memoryLimit": "1024M",
+  "php.suggest.basic": false,
+  "php.validate.enable": false,
+  "phpcs.autoConfigSearch": false,
+  "phpcs.executablePath": "./vendor/bin/phpcs",
+  "phpcs.lintOnType": false,
+  "phpcs.standard": ".phpcs.xml",
+  "phpmd.command": "./vendor/bin/phpmd",
+  "phpmd.rules": ".phpmd.xml",
+  "python.showStartPage": false,
+  "telemetry.enableCrashReporter": false,
+  "telemetry.enableTelemetry": false,
+  "terminal.integrated.copyOnSelection": true,
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.fontSize": 14,
+  "window.newWindowDimensions": "inherit",
+  "workbench.colorTheme": "Zenburn",
+  "workbench.editor.closeOnFileDelete": true,
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.preferredDarkColorTheme": "Zenburn",
+  "workbench.startupEditor": "none"
 }
