Add omnisharp config and telemetry adjustment.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -27,6 +27,8 @@
   "flow.showUncovered": true,
   "git.ignoreLimitWarning": true,
   "javascript.validate.enable": false,
+  "omnisharp.enableRoslynAnalyzers": true,
+  "omnisharp.path": "latest",
   "outline.showFunctions": false,
   "outline.showVariables": false,
   "php.memoryLimit": "1024M",
@@ -168,8 +170,8 @@
   ],
   "python.showStartPage": false,
   "redhat.telemetry.enabled": false,
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
+  "rest-client.enableTelemetry": false,
+  "telemetry.telemetryLevel": "off",
   "terminal.integrated.copyOnSelection": true,
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
