eslint default package manager is yarn.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,6 +9,7 @@
   "editor.rulers": [80, 100, 120],
   "editor.stickyTabStops": true,
   "errorLens.gutterIconsEnabled": true,
+  "eslint.packageManager": "yarn",
   "explorer.confirmDragAndDrop": false,
   "files.associations": {
     "*.inc": "php",
