--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,6 +9,7 @@
   "editor.rulers": [80, 100, 120],
   "editor.stickyTabStops": true,
   "errorLens.gutterIconsEnabled": true,
+  "eslint.packageManager": "yarn",
   "explorer.confirmDragAndDrop": false,
   "files.associations": {
     "*.inc": "php",
@@ -182,6 +183,7 @@
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.fontSize": 14,
+  "update.showReleaseNotes": false,
   "window.newWindowDimensions": "inherit",
   "workbench.colorTheme": "Zenburn",
   "workbench.editor.closeOnFileDelete": true,
