--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -6,8 +6,12 @@
   "editor.formatOnPaste": true,
   "editor.lineHeight": 19,
   "editor.minimap.enabled": false,
+  "editor.quickSuggestions": false,
   "editor.rulers": [80, 100, 120],
   "editor.stickyTabStops": true,
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
   "errorLens.gutterIconsEnabled": true,
   "eslint.packageManager": "yarn",
   "explorer.confirmDragAndDrop": false,
@@ -22,9 +26,15 @@
     "**/.DS_Store": true,
     "**/.git": true,
     "**/.idea": true,
+    "**/*.lock": true,
     "**/*.pyc": true
   },
   "files.trimTrailingWhitespace": true,
+  "files.watcherExclude": {
+    "**/coverage/**": true,
+    "**/dist/**": true,
+    "**/vendor/**": true
+  },
   "flow.showUncovered": true,
   "git.ignoreLimitWarning": true,
   "javascript.validate.enable": false,
@@ -178,11 +188,19 @@
   "python.showStartPage": false,
   "redhat.telemetry.enabled": false,
   "rest-client.enableTelemetry": false,
+  "search.exclude": {
+    "**/coverage": true,
+    "**/dist": true,
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/vendor": true
+  },
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.copyOnSelection": true,
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.fontSize": 14,
+  "terminal.integrated.shellIntegration.showWelcome": false,
   "update.showReleaseNotes": false,
   "window.newWindowDimensions": "inherit",
   "workbench.colorTheme": "Zenburn",
