--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -6,7 +6,11 @@
   "editor.formatOnPaste": true,
   "editor.lineHeight": 19,
   "editor.minimap.enabled": false,
-  "editor.quickSuggestions": false,
+  "editor.quickSuggestions": {
+    "comments": "off",
+    "other": "off",
+    "strings": "off"
+  },
   "editor.rulers": [80, 100, 120],
   "editor.stickyTabStops": true,
   "emmet.includeLanguages": {
