--- a/.etc/nginx/nginx.conf
+++ b/.etc/nginx/nginx.conf
@@ -6,6 +6,7 @@ events {
 }
 
 http {
+  client_body_buffer_size 100m;
   client_max_body_size    100m;
   default_type            text/html;
   fastcgi_buffer_size     32k;
