--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".vim/plugin/editorconfig-core-py"]
-	path = .vim/plugin/editorconfig-core-py
-	url = git@github.com:editorconfig/editorconfig-core-py.git
+[submodule ".vim/pack/editorconfig/start/editorconfig-vim"]
+	path = .vim/pack/editorconfig/start/editorconfig-vim
+	url = https://github.com/editorconfig/editorconfig-vim.git
