Adjust colima config.

--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -128,7 +128,7 @@ docker:
 # vz is macOS virtualization framework and requires macOS 13
 #
 # Default: qemu
-vmType: ""
+vmType: vz
 
 # Volume mount driver for the virtual machine (virtiofs, 9p, sshfs).
 #
@@ -140,7 +140,7 @@ vmType: ""
 # of concurrent reads or writes).
 #
 # Default: virtiofs (for vz), sshfs (for qemu)
-mountType: sshfs
+mountType: virtiofs
 
 # The CPU type for the virtual machine (requires vmType `qemu`).
 # Options available for host emulation can be checked with: `qemu-system-$(arch) -cpu help`.
@@ -178,7 +178,7 @@ provision: []
 # Modify ~/.ssh/config automatically to include a SSH config for the virtual machine.
 # SSH config will still be generated in ~/.colima/ssh_config regardless.
 # Default: true
-sshConfig: true
+sshConfig: false
 
 # Configure volume mounts for the virtual machine.
 # Colima mounts user's home directory by default to provide a familiar
