--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,15 @@
 [submodule ".vim/pack/plugins/start/fugitive"]
 	path = .vim/pack/plugins/start/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule ".zsh_plugins/autosuggestions"]
+	path = .zsh_plugins/autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule ".zsh_plugins/completions"]
+	path = .zsh_plugins/completions
+	url = https://github.com/zsh-users/zsh-completions.git
+[submodule ".zsh_plugins/powerlevel10k"]
+	path = .zsh_plugins/powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
+[submodule ".zsh_plugins/syntax-highlighting"]
+	path = .zsh_plugins/syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
