--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -30,7 +30,7 @@ format = '[$symbol$percentage ]($style bg:#c0c0c0)'
 threshold = 100
 
 [cmd_duration]
-format = '[ $duration ](bg:#dfaf87)'
+format = '[  $duration ](bg:#dfaf87)'
 min_time = 0
 
 [directory]
@@ -66,13 +66,13 @@ behind = '⇣$count '
 conflicted = '=$count '
 deleted = '✘$count '
 diverged = '⇕⇡$ahead_count ⇣$behind_count '
-format = '[$conflicted$stashed$deleted$renamed$modified$staged$untracked$ahead_behind ](bg:#dfaf87)'
+format = '[$conflicted$stashed$deleted$renamed$staged$modified$untracked$ahead_behind ](bg:#dfaf87)'
 modified = '!$count '
 renamed = '»$count '
-staged = '+[$count](bg:#dfaf87 fg:green) '
+staged = '+$count '
 stashed = '*$count '
 untracked = '?$count '
-up_to_date = '✓'
+up_to_date = '[✓](bg:#dfaf87 bold fg:green)'
 
 [golang]
 format = '[ $symbol ($version) ](bg:#86bbd8)'
@@ -91,7 +91,7 @@ version_format = '$raw'
 
 [os]
 disabled = false
-format = '[ $symbol ](bg:#c0c0c0)'
+format = '[ $symbol ](bg:#c0c0c0 fg:#303030)'
 
 [os.symbols]
 Alpine = ''
@@ -121,5 +121,5 @@ zsh_indicator = '%_'
 
 [time]
 disabled = false
-format = '[$time ](bg:#c0c0c0 fg:#000000)'
+format = '[$time ](bg:#c0c0c0 fg:#303030)'
 time_format = "%r"
