--- a/.util/com.googlecode.iterm2.plist
+++ b/.util/com.googlecode.iterm2.plist
@@ -1081,6 +1081,8 @@
 			<array/>
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
+			<key>Title Components</key>
+			<integer>6</integer>
 			<key>Transparency</key>
 			<real>0.048570478723404302</real>
 			<key>Unlimited Scrollback</key>
